(fix): group and channel names overflow issue (fix): clicking on the join group button also opens up the group (fix): add more contrast to buttons

--- a/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
+++ b/src/app/modules/onboarding-v2/steps/channels/list/list.component.scss
@@ -3,6 +3,7 @@ m-onboarding__channelList {
   width: 100%;
 
   .m-onboarding__channelList {
+    display: flex;
     h3 {
       margin: 0;
       font-size: 13px;
@@ -11,6 +12,10 @@ m-onboarding__channelList {
       @include m-theme() {
         color: themed($m-grey-800);
       }
+    }
+
+    .mdl-spinner {
+      margin: 0 auto;
     }
   }
 
@@ -27,6 +32,7 @@ m-onboarding__channelList {
     margin: 0;
     padding: 0;
     list-style: none;
+    width: 100%;
   }
 
   .m-channelList__item {
@@ -89,7 +95,6 @@ m-onboarding__channelList {
         display: block;
 
         height: 19px;
-        width: 92px;
         color: #9b9b9b;
         font-family: Roboto;
         font-size: 14px;
